BREAKING CHANGES: Updated server to 1.19.3